--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,3 +89,20 @@ button {
 	border-top: 1px;
 }
 
+div.item {
+	margin-bottom:10px;
+}
+
+.item h3 span {
+	margin-right: 5px;
+	font-size: 10px;
+	padding: 3px;
+	background-color: blue;
+	color: #fff;
+	border-radius: 3px;
+}
+
+h3 {
+	margin-bottom: 10px;
+}
+
