--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,17 +68,20 @@ body {
 .title {
 	background-color: #20315a;
 	color: #ffffff;
-    font-family: 'Chela One', cursive;
+    font-family: 'Roboto Slab', serif;
     margin-bottom: 50px;
+    font-weight: bold;
+}
+
+#title-text {
+    font-weight: bold;
 }
 
 /* search area */
 
 .input-titles {
 	padding: 5px 5px 8px 0px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    
+    font-family: 'Roboto Slab', serif; 
 }
 
 .inputBox {
@@ -99,14 +102,14 @@ body {
 #search-title {
     background-color: #20315a;
 	color: #ffffff;
-    font-family: 'Chela One', cursive;
+    font-family: 'Roboto Slab', serif;
     font-size: 20px;
 }
 
 #result-title {
     background-color: #20315a;
 	color: #ffffff;
-    font-family: 'Chela One', cursive;
+    font-family: 'Roboto Slab', serif;
     font-size: 20px;
 }
 
